--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 	<nav>
-		<h1>Jatin Garg</h1>
+		<h1>Anjali Mishra</h1>
 		<ul id="navul">
 			<li><a class="Homered" href="#">Home</a></li>
 			<li><a class="Homeblack" href="#">Portfolio</a></li>
