--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 <div class="divider"></div>
 <div class="bgimage">
-	<h2 class="homesub"> My Name Is <span style="color: black"> Jatin Garg</span> </h2>
+	<h2 class="homesub"> My Name Is <span style="color: black"> Anjali</span> </h2>
 	<h1 class="homedes">DESIGN & </h1>
 	<h1 class="homepho">PHOTOGRAPHY</h1>
 	<br>
