--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jatin and Anjali</title>
+	<title>Jatin </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
 	<nav>
-		<h1>Anjali Mishra</h1>
+		<h1>Jatin Garg </h1>
 		<ul id="navul">
 			<li><a class="Homered" href="#">Home</a></li>
 			<li><a class="Homeblack" href="#">Portfolio</a></li>
@@ -19,7 +19,7 @@
 </header>
 <div class="divider"></div>
 <div class="bgimage">
-	<h2 class="homesub"> My Name Is <span style="color: black"> Anjali</span> </h2>
+	<h2 class="homesub"> My Name Is <span style="color: black"> Jatin Garg</span> </h2>
 	<h1 class="homedes">DESIGN & </h1>
 	<h1 class="homepho">PHOTOGRAPHY</h1>
 	<br>
