--- a/project.html
+++ b/project.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	
 	<meta charset="utf-8">
 	<title> College Project</title>
 	<link rel="stylesheet" type="text/css" href="projectcss.css">
