--- a/aps.html
+++ b/aps.html
@@ -3,6 +3,7 @@
 <head>
 	<title>APS</title>
 	<link rel="stylesheet" type="text/css" href="projectcss.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
 	<h1 class="heading">Welcome to Dronacharya College Of Engineering</h1>
