--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul id="navul">
 			<li><a class="Homered" href="#">Home</a></li>
 			<li><a class="Homeblack" href="#">Portfolio</a></li>
-			<li><a class="Homeblack" href="file:///C:/Users/A/Desktop/html/aboutme.html">About Me</a></li>
+			<li><a class="Homeblack" href="aboutme.html">About Me</a></li>
 			<li><a class="Homeblack" href="contact.html">Contact</a></li>
 		</ul>
 	</nav>	
