--- a/aps.html
+++ b/aps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>APS</title>
+	<title>DCE</title>
 	<link rel="stylesheet" type="text/css" href="projectcss.css">
 </head>
 <body>
