--- a/aps.html
+++ b/aps.html
@@ -23,7 +23,7 @@
 			<ul>
 				<li><a href="#"> B.Tech </a>
 					<ul>
-						<li><a href="apsdptrmnt.html"> Applied Science </a></li>
+						<li><a href="apsdprtmnt.html"> Applied Science </a></li>
 						<li><a href="#"> Information technology</a></li>
 						<li><a href="#"> Computer Science </a></li>
 						<li><a href="#"> Electronics & Communication </a></li>
