--- a/apsdprtmnt.html
+++ b/apsdprtmnt.html
@@ -27,13 +27,77 @@
 	</div>
 </div>
 
-<div class="divider1"></div> 
-<div class="main">
 <div class="box">
 <h2>Applied Sciences Department</h2>
 <p>Applied Sciences & Humanities operate in absolute synchronization at the First Year Level of the Four-year B.Tech courses. The obvious is to provide a firm foundation to the aspirants of varied streams from Second year onwards. The Faculty at the Department is equipped with prestigious M.Tech., M.B.A, M.B.E, M.Phil, Ph.D & other degrees & adequate experience & make persistent endeavors tosee that students of the First year go to the hogher classes with all round development of their personality.</p>
-	
+
 </div>
+<div class="divider1"></div> 
+
+<div class="navigation">
+	<h2 class="nav">Navigation</h2>
+	<table cellspacing="20" width="300px">
+
+<tr>
+      	<td> <a href="aps.html">Home</a></td>
+</tr>
+<tr>
+       <td><a href="">Faculty</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/APS/Downloads/Syllabus/BTech_1st__2nd_Sem_effective_from%202013-14_02_syll_22052015.pdf"> Syllabus</a></td>
+</tr>
+<tr>
+       <td><a href="academiccalender.html">  Academic Calender </a> </td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/APS/learningProcess.aspx?depatment=APS&Course=B_Tech"> Learning Process</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/APS/Downloads/TimeTable/Time_Table_APS_03012018.pdf"> Time Table</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/APS/1stYear/BasicsElectronics.aspx?Subject=BE&Semester=1stYear"> Subject Infomation</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/APS/results.aspx?depatment=APS&Course=B_Tech"> Results</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/achievers/APS_UniversityMerits_2016_2017.aspx?department=APS&Year=2016_2017"> Achievers</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/PaperPersented/Student_APS_InterNational.aspx?UserType=Student&Nationalty=InterNational"> Paper Presenation</a></td>
+</tr>
+<tr>
+       <td><a href="http://ggnindia.dronacharya.info/glimpse/APSWorkshops_2016.aspx?depatment=APS&Year=2016"> Glimpse Of Department</a></td>
+</tr>
+</table>
+</div>
+
+<div class="HOD">
+	<img class="hodimg" src="http://ggnindia.dronacharya.info/APS/images/Faculty/HOD-APS.jpg">
+	<h2 class="hoddesk">HOD's Desk</h2>
+	<p class="hodinfo1">Mrs. Sanghamitra V. Arora <br>
+
+	<a href="#"> hodapplied@ggnindia.dronacharya.info</a><br>
+	Head of the Department,<br>
+	Applied Sciences And Humanities
+
+</p>
+	<p class="hodinfo">Teacher should be specialist of his branch of knowledge, have the ability to build up the student under his charge and make teaching an enjoyable experience?.	- RIGVEDA 1/69/2
+
+Education research, human values and ethics are the four pillars of this prestigious Dronacharya Gurukul. The Department of Applied Sciences and Humanities is fountainhead of new ideas and innovations in the field of Science and Technology. It is our endeavor to create an ambience of academic excellence in which new ideas, research and scholarship flourish and subsequently pave the path from which the leaders and innovators will emerge.
+
+In addition to the normal curriculum of studies various other programs and online courses offered at the institute have the flexibility to evolve and change in response to the requirements in the present globally competitive world. This approach servesthe dual purpose of building a solid foundation of knowledge and help in enhancing confidence, creativity and innovativeness amongst our budding technocrats.
+
+To achieve the pristine purpose we provide our students an excellent milieu of state-of-art infrastructure, well-equipped updated laboratories and intellectually stimulating teaching fraternity committed for hard work and dedication. A favorable and productive student-teacher relationship ensures that our students develop into valuable individuals with technical and professional competence of the highest degree.
+
+The Department of Applied Sciences & Humanities provides opportunities to the students to attend various International/National Seminars/Conferences/ Symposiums/Workshops etc. In order to develop the research-oriented mindset at the very outset, it has been made mandatory for every student in the very first year itself to write and present a research paper. Motivational lectures in collaboration with industries and academia are also organized from time to time. Special emphasis is laid for enhancing communication skills and in the same sequence online-certifications, International Test for English Proficiency (iTEP) of H.Q. USA etc are conducted. A lot of importance is laid on the overall personality development of the students so as to foster in them a necessary drive and confidence.
+
+In this way, we aspire to reassert the significance of high quality education by producing competent professionals who can shape the destiny of our nation into a stronger and developed stature.
+</p>
+
+
 </div>
 
 </body>
