--- a/apsdprtmnt.html
+++ b/apsdprtmnt.html
@@ -42,7 +42,7 @@
       	<td> <a href="aps.html">Home</a></td>
 </tr>
 <tr>
-       <td><a href="">Faculty</a></td>
+       <td><a href="faculty.html">Faculty</a></td>
 </tr>
 <tr>
        <td><a href="http://ggnindia.dronacharya.info/APS/Downloads/Syllabus/BTech_1st__2nd_Sem_effective_from%202013-14_02_syll_22052015.pdf"> Syllabus</a></td>
