--- a/faculty.html
+++ b/faculty.html
@@ -5,6 +5,7 @@
 		Faculty
 	</title>
 	<link rel="stylesheet" type="text/css" href="facultycss.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div class="fc">
