--- a/aps.html
+++ b/aps.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Dronacharya College Of Engineering</title>
 	<link rel="stylesheet" type="text/css" href="projectcss.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div id="main1">
