--- a/aps.html
+++ b/aps.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<div class="container">
 	<div id="main1">
 
 
@@ -94,6 +95,7 @@
 </div>
 <div>
 	<a class="Calender" href="academiccalender.html">Academic Calender</a>
+</div>
 </div>
 
 </body>
