--- a/aps.html
+++ b/aps.html
@@ -20,7 +20,7 @@
 	<div id="main">
 <ul class="main-ul">
 		<li><a href="https://nickname000.github.io/aps"> Home </a></li>
-		<li><a href="#">About</a></li>
+		<li><a href="about.html">About</a></li>
 		<li><a href="#">Courses</a>
 			<ul>
 				<li><a href="#"> B.Tech </a>
