--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<header><marquee direction="right">About Overselves</marquee></header>
+		<header><marquee direction="right">About Ourselves</marquee></header>
 		<div class="divider"></div>
 	
 <div class="dce">
