--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
 <div class="divider3"></div>
 
-<div class="ap"><marquee direction="right">Management Prespective</marquee></div>
+<div class="ap"><marquee direction="right">Management Perspective</marquee></div>
 
 <div class="chairman">
 
