--- a/academiccalender.html
+++ b/academiccalender.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<div class="container-fluid">
 
 
 <h2 align="center">Academic Calendar (Even Semester) Session 2017 - 18 (January - June 2018)</h2>
 
-<div class="main">
-<table class="table">
+<div class="container">
+<table class="table-responsive">
   <thead class="thead">
     <tr>
       <th></th>
@@ -150,6 +150,6 @@
           (iv) 21-04-18 
         </li>
     </ul>
-
+</div>
 </body>
 </html>
