--- a/apsrs.html
+++ b/apsrs.html
@@ -13,8 +13,40 @@
 		<a href="http://www.mdurohtak.ac.in/"><img id="img" src="https://www.jagranjosh.com/imported/images/E/Articles/MDU-Rohtak-logo.png"></a>
 	</header>	
 
+	<div class="divider"> </div>
+	<div class="main">
+	<ul class="main-ul">
+		<li><a href="#"> Home </a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Courses</a>
+			<ul>
+				<li><a href="#"> B.Tech </a>
+					<ul>
+						<li><a href="apsdprtmnt.html"> Applied Science </a></li>
+						<li><a href="#"> Information technology</a></li>
+						<li><a href="#"> Computer Science </a></li>
+						<li><a href="#"> Electronics & Communication </a></li>
+						<li><a href="#"> Mechanical </a></li>	
+						<li><a href="#"> Civil </a></li>		
+					</ul>
+				</li>
+				<li><a href="#"> M.Tech </a>
+					<ul>
+						<li><a href="#"> Information technology </a></li>
+						<li><a href="#"> Computer Science</a></li>
+						<li><a href="#"> Electronics & Communication </a></li>
+						<li><a href="#"> Mechanical</a></li>
+
+					</ul>	
+						</li>	
+			</ul>
 
 
+		</li>	
+		<li><a href="file:///C:/Users/A/Desktop/html/login.html">Login</a></li>
+		<li><a href="#">Contact Us</a></li>
+	</ul>
+</div>
 
 
 
