--- a/apsrs.html
+++ b/apsrs.html
@@ -48,20 +48,11 @@
 	</ul>
 </div>
 
-<div class="divider2"></div>
-
 <div class="dceimg">
 	<img class="img1" src="http://www.dronacharyadce.ac.in/Slider/data1/images/new1.jpg">
 	<h2>Welcome to Dronacharya College of Engineering</h2>
 	<h3>Our Mission and Goal</h3>
-	<p>We, at Dronacharya College of Engineering, are absolutely committed to serve the society and improve the mode of life by imparting high quality education in the field of Engineering and Management catering to the explicit and implicit needs of the students, society, humanity and industry. ?Shiksha evam Sahayata? i.e. Education and Help are the two words etched on our banner soaring higher year after year. Our goal is to continuously improve the healthy learning environment and facilities being provided to the students to achieve academic excellence for employability as world class Technocrats and Managers, apart from making them noble human beings of a nation growing from strength to strength, dispelling the darkness of ignorance and ameliorating the society by means of philanthropic endeavours.</p>
-
-
-
-
-
-
-
+	<p>We, at Dronacharya College of Engineering, are absolutely committed to serve the society and improve the mode of life by imparting high quality education in the field of Engineering and Management catering to the explicit and implicit needs of the students, society, humanity and industry. "Shiksha evam Sahayata" i.e. Education and Help are the two words etched on our banner soaring higher year after year. Our goal is to continuously improve the healthy learning environment and facilities being provided to the students to achieve academic excellence for employability as world class Technocrats and Managers, apart from making them noble human beings of a nation growing from strength to strength, dispelling the darkness of ignorance and ameliorating the society by means of philanthropic endeavours.</p>
 
 </div>
 
