--- a/apsrs.html
+++ b/apsrs.html
@@ -56,7 +56,7 @@
 
 </div>
 	
-		<div class="newss">
+		<div class="container">
 		<p class="latest">Latest News</p>
 	<ul class="ln">
 		<marquee direction="up" scrollamount="5">
