--- a/apsdprtmnt.html
+++ b/apsdprtmnt.html
@@ -39,7 +39,7 @@
 	<table cellspacing="20" width="300px">
 
 <tr>
-      	<td> <a href="aps.html">Home</a></td>
+      	<td> <a href="apsrs.html">Home</a></td>
 </tr>
 <tr>
        <td><a href="faculty.html">Faculty</a></td>
