--- a/apsrs.html
+++ b/apsrs.html
@@ -43,7 +43,7 @@
 
 
 		</li>	
-		<li><a href="file:///C:/Users/A/Desktop/html/login.html">Login</a></li>
+		<li><a href="login.html">Login</a></li>
 		<li><a href="#">Contact Us</a></li>
 	</ul>
 </div>
